--- a/Brouillon.ipynb
+++ b/Brouillon.ipynb
@@ -2,22 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "id": "19b07c6b",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'pandas'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mModuleNotFoundError\u001b[39m                       Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mpandas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mpd\u001b[39;00m\n",
-      "\u001b[31mModuleNotFoundError\u001b[39m: No module named 'pandas'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd"
    ]
@@ -211,11 +199,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "45771d45",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import pandas as pd\n",
+    "import time\n",
+    "import jiwer\n",
+    "import openai\n",
+    "import os\n",
+    "import requests\n",
+    "import csv\n",
+    "\n",
+    "synthesis = [{\n",
+    "    \"mean_wer\" : \"qsdsd\",\n",
+    "    \"std_wer\" : \"qsdqsd\",\n",
+    "    \"mean_cer\" : \"wx\",\n",
+    "    \"std_cer\" : \"qsdqd\"\n",
+    "}]\n",
+    "\n",
+    "synthesis_df = pd.DataFrame(synthesis)\n",
+    "synthesis_df.to_csv(\n",
+    "    r\"C:\\Users\\WMZY6987\\OneDrive - orange.com\\Documents\\projet_trasncription\\synthesis.tsv\",\n",
+    "    sep=\"\\t\",\n",
+    "    index=False\n",
+    "    )\n",
+    "\n",
+    "synthesis_file = r\"C:\\Users\\WMZY6987\\OneDrive - orange.com\\Documents\\projet_trasncription\\synthesis.tsv\"\n",
+    "new_synthesis = {\n",
+    "    \"mean_wer\" : \"15732\",\n",
+    "    \"std_wer\" : \"157\",\n",
+    "    \"mean_cer\" : \"11252\",\n",
+    "    \"std_cer\" : \"12\"\n",
+    "}\n",
+    "\n",
+    "\n",
+    "\n",
+    "df = pd.read_csv(synthesis_file, sep =\"\\t\")\n",
+    "\n",
+    "df = pd.concat([df,pd.DataFrame([new_synthesis])], ignore_index=True)\n",
+    "\n",
+    "df.to_csv(synthesis_file, sep = \"\\t\", index =False)\n"
+   ]
   },
   {
    "cell_type": "code",
@@ -242,7 +268,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.6"
+   "version": "3.13.7"
   }
  },
  "nbformat": 4,
